privacy policy page and security issues solved

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>Silas Hayri | Software Engineer</title>
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>⚔️</text></svg>">
   <link rel="stylesheet" href="style.css">
@@ -50,10 +51,16 @@
           <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
         </svg>
       </a>
+      <a href="privacy-policy.html" class="link-btn" aria-label="Privacy Policy">
+        <svg viewBox="0 0 24 24" width="32" height="32" fill="currentColor">
+          <path d="M12 2l7 4v6c0 5-3.5 9.5-7 10-3.5-.5-7-5-7-10V6l7-4zm0 2.18L7 6.5v5.67c0 3.73 2.53 7.41 5 7.97 2.47-.56 5-4.24 5-7.97V6.5l-5-2.32zM12 9c1.1 0 2 .9 2 2v2c0 1.1-.9 2-2 2s-2-.9-2-2v-2c0-1.1.9-2 2-2z"/>
+        </svg>
+      </a>
     </div>
     
     <div class="footer">
       <p>// Crafted with code and creativity</p>
+      <p>© 2026 silashayri</p>
     </div>
   </div>
   
